<resources>
    <string name="app_name">Bonfo2</string>
    <string name="title_activity_settings_main">Settings</string>
    <string name="permission_file_title">File access permission</string>
    <string name="permission_file_msg">The app requires file access to list EBooks.</string>
    <string name="error_cant_open_view_ebook">The selected EBook can not be opened.</string>

    <!-- Preference Titles -->
    <string name="directory_header">Directories</string>

    <!-- Sync Preferences -->
    <string name="EpubRefreshTitle">Update EBooks</string>
    <string name="EPubRefreshInitializing">Initializing …</string>
    <string name="EPubRefreshActionAbort">Cancel</string>
    <string name="channel_name">EBook updating</string>
    <string name="channel_description">All information that occur in regards to updating the EBook list.</string>
    <string name="pref_dir_header">Directories</string>
    <string name="pref_dir_add">Add Directory</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="list_author">by %s</string>
    <string name="list_clear_msg">
        No books found.\n
        Please select the folders containing e-books in the settings.
    </string>
    <string name="pref_dir_empty">No folders selected.</string>
    <string name="action_sort">Sort By</string>
    <string name="action_sort_apply">Apply</string>
    <string name="sort_by_cdate">Creation Date</string>
    <string name="sort_by_adate">Last Access</string>
    <string name="sort_asc">asc</string>
    <string name="sort_dsc">dsc</string>
    <string name="filter_by_small">Show small files</string>
    <string name="filter_by_nsfw">Show NSFW content</string>
    <string name="sort_by_size">Size</string>
    <string name="pref_default_header">Misc</string>
    <string name="min_file_size_title">Min file size (kb)</string>
    <string name="pref_dev_title">Developer</string>
    <string name="pref_dev_enabled_title">show developer options</string>
    <string name="pref_dev_items_empty_title">Empty EPub informations</string>
    <string name="pref_dir_select_info">Where do you want to add a folder from?</string>
    <string name="pref_dir_select_title">Select method</string>
    <string name="pref_dir_select_native">Harddrive</string>
    <string name="pref_dir_select_saf">Another app</string>
    <string name="pref_dev_reset_last_modified">Reset last modified</string>
    <string name="pref_dev_use_mediastore_title">Use MediaStore</string>
    <string name="pref_dev_use_mediastore_summary">may be faster but less accurate</string>
</resources>
