<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_default_header">
        <EditTextPreference
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:defaultValue="120"
            android:key="min_file_size"
            android:title="@string/min_file_size_title" />
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/directory_header">

        <eu.schnuff.bonfo2.settings.DirectoriesPreference
                app:key="watched_directories"
                android:layout_height="wrap_content" android:layout_width="match_parent"
                android:layout="@layout/preference_directories"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_dev_title">
        <SwitchPreference
            android:title="@string/pref_dev_enabled_title"
            android:key="developer_enabled" />
        <Preference
            android:title="@string/pref_dev_items_empty_title"
            android:key="developer_items_empty"
            android:dependency="developer_enabled"/>
    </PreferenceCategory>

</PreferenceScreen>
