<?xml version ="1.0" encoding ="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/action_search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="always|collapseActionView"/>
    <item android:title="@string/action_refresh" android:id="@+id/action_refresh"
          android:icon="@drawable/ic_sync" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_sort"
          android:title="@string/action_sort"
          android:icon="@drawable/ic_sort" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
          android:title="@string/title_activity_settings_main"
          android:icon="@drawable/ic_action_settings"/>
</menu>
