<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:id="@android:id/widget_frame">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/pref_dir_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/pref_dir_header" android:layout_weight="1"
                android:gravity="center"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_add" android:id="@+id/pref_dir_add"
                android:layout_weight="0" android:contentDescription="@string/pref_dir_add"/>
    </LinearLayout>
    <TextView
            android:text="@string/pref_dir_empty"
            android:layout_width="match_parent"
            android:layout_height="80dp" android:id="@+id/pref_dir_empty" android:gravity="center"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="?attr/listPreferredItemPaddingStart"
            android:clipToPadding="true" android:id="@+id/pref_dir"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" android:visibility="gone"/>
</LinearLayout>